fix: header overflow

--- a/src/components/footer/footer.module.sass
+++ b/src/components/footer/footer.module.sass
@@ -41,6 +41,7 @@
         display: flex
         justify-content: center
         align-items: center
+        flex-shrink: 0
         width: 3.125rem
         padding: 0
         border-left: var(--border)
@@ -116,3 +117,5 @@
 
 .copyright, .userinfoContainer, .screenres
   flex-grow: 1
+
+  
