--- a/src/components/header/header.module.sass
+++ b/src/components/header/header.module.sass
@@ -75,3 +75,7 @@
 
 .logo
   flex-grow: 1
+
+.themeIcon
+  @media screen and ( max-width: 550px)
+    display: none !important
